--- a/css/parte-superior.css
+++ b/css/parte-superior.css
@@ -156,6 +156,11 @@
         padding-left: 16px;
     }
 
+    .logo p{
+        height: 10px;
+        font-size: 13px;
+    }
+
     .links{
         padding-right: 16px;
     }
