--- a/css/sobre.css
+++ b/css/sobre.css
@@ -117,6 +117,11 @@
         left: 0px;
         top: 42px;
     }
+
+    .sobreMi img{
+        height: 55%;
+        width: 21%;
+    }
         
 }
 
@@ -152,5 +157,10 @@
         font-weight: 400;
         font-size: 14px;
         line-height: 16px;
+    }
+
+    .sobreMi img{
+        height: 30%;
+        width: 20%;
     }
 }
