--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body{
 
 .piePagina h2{
     position: static;
-    width: 229px;
+    width: 400px;
     height: 38px;
     left: 605.5px;
     top: 32px;
@@ -141,5 +141,10 @@ body{
     .piePagina{
         width: 100%;
         height: 102px;
+    }
+
+    .piePagina h2{
+        width: 100%;
+        font-size: 14px;
     }
 }
